# Easydone

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  install-update-autostart.bat  package-lock.json  package.json  publish.config.example.json  start-build.bat  start-dev.bat  start-publish-gui.bat  start-publish.bat  start-update-server.bat  tsconfig.tsbuildinfo  uninstall-update-autostart.bat
.tmp_Camp_xlsx/: [Content_Types].xml
.tmp_Dialog_xlsx/: [Content_Types].xml
.tmp_MerchantDialog_xlsx/: [Content_Types].xml
.tmp_Mission_xlsx/: [Content_Types].xml
.tmp_item_loc/: [Content_Types].xml
.tmp_level/: [Content_Types].xml
docs/: 使用说明.md
keys/: README.md  easydone-updater.key.pub  signing-key.lock.json
publish-gui/: app.js  index.html  style.css
scripts/: _fix.py  _patch_export.py  _setout.py  apply-emote-final.mjs  apply-emote-fixes.mjs  apply-emote-plan.mjs  apply-emote-remark-column.mjs  apply-execute-plan-phase2.mjs  apply-execute-plan.mjs  apply-filter-ui-m1.mjs  apply-gmt-op-log.mjs  apply-sidebar-integration.mjs  apply-ui-fixes.mjs  apply-update-integration.mjs  backup-key-repo.mjs  backup-key-repo.test.mjs  ensure-publish-config.mjs  export_task_testcases.py  filter-modals-fragment.txt  fix-modal-primary-buttons.mjs  free-dev-port.mjs  generate_task_testcase_xlsx.py  git-save-branch.mjs  init-signing-key.mjs  install-update-autostart.ps1  patch-last-zh.mjs  (+22 more)
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gmt.rs  gtop.rs  main.rs  update_preflight.rs
(+332 files in other folders)
